# archies-standard-library

./: .config  .config.old  .gitignore  CMakeLists.txt  README.md  build.sh  config.h  configure.sh  dockerfile  kconfig  main.c  temp_build.sh
algorithms/: CMakeLists.txt  kconfig  sort.c  sort.h
cmake/: import_kconfig.cmake
custom_types/: CMakeLists.txt  array.h
custom_types/array_type/: CMakeLists.txt
custom_types/array_type/inc/: CMakeLists.txt  array_type.h
custom_types/array_type/src/: CMakeLists.txt  array_type.c
explorations/: CMakeLists.txt  README.md  main.c  memory_io.c  memory_io.h  memory_tests.c  q_format_tests.c
helpers/: CMakeLists.txt  README.md  macros.h
memory/: CMakeLists.txt  kconfig  main.c  memory.c  memory.h  temp_build.sh
memory_io/: CMakeLists.txt  example_memory_map.yaml  kconfig  memory_io.c  memory_io.h  test.py
tests/: CMakeLists.txt  tests.c  tests.h
tests/unit_tests/: CMakeLists.txt  unit_tests_memory.c  unit_tests_memory.h  unit_tests_memory_io.c  unit_tests_memory_io.h
